examples/test/testpolicy16725.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16725
  namespace: namespace247
spec:
  podSelector:
    matchLabels:
      key41: value35
      key44: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value45
          key30: value47
          key39: value2
      podSelector:
        matchLabels:
          key26: value9
          key27: value5
          key28: value13
